--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
 
   flutter_bluetooth_serial: ^0.4.0
   scoped_model: ^2.0.0
+  flutter_local_notifications: ^15.1.1
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
